// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Custom box shadow 1`] = `
.c0 {
  background-color: #ffffff;
  box-shadow: none;
  border: solid 1px rgba(0,0,0,0.08);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 16px;
}

<div
  className="c0"
  overflow="visible"
  width="100%"
/>
`;

exports[`Storyshots Card Default 1`] = `
.c0 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 16px;
}

<div
  className="c0"
  overflow="visible"
  width="100%"
/>
`;

exports[`Storyshots Card Floating 1`] = `
.c0 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 16px;
}

<div
  className="c0"
  overflow="visible"
  width="100%"
/>
`;

exports[`Storyshots Card Floating with content (Empty State) and 560px width 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .thumbnail,
.c1 > .icon-wrapper {
  margin-bottom: 16px;
}

.c1 > .description,
.c1 > .info {
  margin-top: 16px;
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 560px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 16px;
}

<div
  className="c0"
  overflow="visible"
  width="560px"
>
  <div
    className="c1"
  >
    <div
      className="c2 title"
      fontWeight="title"
      size={20}
      type="#2f313a"
    >
      My Card Title
    </div>
    <div
      className="c3 description"
      size={16}
      type="#59636f"
    >
      My card description
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Floating with content and 40px padding and 1136px width 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .thumbnail,
.c1 > .icon-wrapper {
  margin-bottom: 16px;
}

.c1 > .description,
.c1 > .info {
  margin-top: 16px;
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 1136px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 40px;
}

<div
  className="c0"
  overflow="visible"
  width="1136px"
>
  <div
    className="c1"
  >
    <div
      className="c2 title"
      fontWeight="title"
      size={20}
      type="#2f313a"
    >
      My Card Title
    </div>
    <div
      className="c3 description"
      size={16}
      type="#59636f"
    >
      My card description
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Type Featured 1`] = `
.c0 {
  background-color: #3498db;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 16px;
}

<div
  className="c0"
  overflow="visible"
  type="FEATURED"
  width="100%"
/>
`;

exports[`Storyshots Card Type Featured with 300px width 1`] = `
.c0 {
  background-color: #3498db;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 300px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 16px;
}

<div
  className="c0"
  overflow="visible"
  type="FEATURED"
  width="300px"
/>
`;

exports[`Storyshots Card Type Neutral 1`] = `
.c0 {
  background-color: #f6f8f9;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 16px;
}

<div
  className="c0"
  overflow="visible"
  type="NEUTRAL"
  width="100%"
/>
`;

exports[`Storyshots Card With content (footer and empty state) and 1136px width 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .thumbnail,
.c1 > .icon-wrapper {
  margin-bottom: 16px;
}

.c1 > .description,
.c1 > .info {
  margin-top: 16px;
}

.c6 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c8 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c8 span.margin-left {
  margin-left: 4px;
}

.c8 span.margin-right {
  margin-right: 4px;
}

.c8 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 > a {
  color: inherit;
}

.c8:hover {
  color: #3498db;
}

.c5 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .text {
  margin-bottom: 8px;
}

.c5 > .image {
  margin-right: 16px;
}

.c4 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c9 > * {
  margin-left: 16px;
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 1136px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 0;
}

<div
  className="c0"
  overflow="visible"
  width="1136px"
>
  <div
    className="c1"
  >
    <div
      className="c2 title"
      fontWeight="title"
      size={20}
      type="#2f313a"
    >
      My Card Title
    </div>
    <div
      className="c3 description"
      size={16}
      type="#59636f"
    >
      My card description
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5 helperContent"
      size={16}
    >
      <img
        alt=""
        className="c6 image"
        height={40}
        size={40}
        src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
        width={40}
      />
      <div>
        <div
          className="c7 text"
          size={16}
          type="#2f313a"
        >
          Have questions about account setup?
        </div>
        <div
          className="c8 link"
          disabled={false}
          fontWeight="600"
          size={16}
          type="#59636f"
        >
          <a
            href="#"
          >
            Get support
          </a>
        </div>
      </div>
    </div>
    <div
      className="c9 actionsContainer"
    />
  </div>
</div>
`;

exports[`Storyshots Card With overflowing content 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c3 {
  position: relative;
  display: inline-block;
}

.c3 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c3 .appear-enter {
  opacity: 0;
}

.c3 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c3 .appear-exit {
  opacity: 1;
}

.c3 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 .icon {
  display: inline-block;
  margin: 0 4px;
  cursor: pointer;
  color: #59636f;
}

.c1 .icon .farmblocks-icon {
  font-size: 1.2em;
}

.c1 .icon:hover,
.c1 .hovered {
  color: #3498db;
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 16px;
}

@media only screen and (pointer:coarse) {
  .c3 .hit-area {
    min-height: 40px;
    min-width: 40px;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
  }
}

<div
  className="c0"
  overflow="visible"
  width="100%"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      <span
        className="text "
      >
        Visible tooltip
      </span>
      <div
        className="c3 icon"
        onMouseLeave={[Function]}
      >
        <div
          className="hit-area"
          onMouseOver={[Function]}
        />
        <span
          className="c4"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height={16}
            viewBox="2 2 20 20"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16Zm-.354 10.594c.736 0 1.28.517 1.28 1.189v.028c0 .671-.544 1.189-1.28 1.189-.735 0-1.28-.518-1.28-1.19v-.027c0-.672.545-1.189 1.28-1.189ZM11.941 7C14.058 7 15.5 8.035 15.5 9.895v.028c0 1.776-1.295 2.504-2.899 2.812l-.044.251a.807.807 0 0 1-.793.685h-.118a.794.794 0 0 1-.793-.685l-.148-.951c-.073-.462.206-.784.676-.84 1.28-.152 1.869-.53 1.869-1.216v-.028c0-.628-.501-.992-1.354-.992-.632 0-1.177.18-1.705.558a1.166 1.166 0 0 1-.663.224c-.558 0-1.028-.447-1.028-.978 0-.266.116-.546.381-.756C9.661 7.392 10.647 7 11.941 7Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card With overflowing content hidden 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c3 {
  position: relative;
  display: inline-block;
}

.c3 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c3 .appear-enter {
  opacity: 0;
}

.c3 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c3 .appear-exit {
  opacity: 1;
}

.c3 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 .icon {
  display: inline-block;
  margin: 0 4px;
  cursor: pointer;
  color: #59636f;
}

.c1 .icon .farmblocks-icon {
  font-size: 1.2em;
}

.c1 .icon:hover,
.c1 .hovered {
  color: #3498db;
}

.c0 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 16px;
}

@media only screen and (pointer:coarse) {
  .c3 .hit-area {
    min-height: 40px;
    min-width: 40px;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
  }
}

<div
  className="c0"
  overflow="hidden"
  width="100%"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      <span
        className="text "
      >
        Overflowing tooltip not visible
      </span>
      <div
        className="c3 icon"
        onMouseLeave={[Function]}
      >
        <div
          className="hit-area"
          onMouseOver={[Function]}
        />
        <span
          className="c4"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height={16}
            viewBox="2 2 20 20"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16Zm-.354 10.594c.736 0 1.28.517 1.28 1.189v.028c0 .671-.544 1.189-1.28 1.189-.735 0-1.28-.518-1.28-1.19v-.027c0-.672.545-1.189 1.28-1.189ZM11.941 7C14.058 7 15.5 8.035 15.5 9.895v.028c0 1.776-1.295 2.504-2.899 2.812l-.044.251a.807.807 0 0 1-.793.685h-.118a.794.794 0 0 1-.793-.685l-.148-.951c-.073-.462.206-.784.676-.84 1.28-.152 1.869-.53 1.869-1.216v-.028c0-.628-.501-.992-1.354-.992-.632 0-1.177.18-1.705.558a1.166 1.166 0 0 1-.663.224c-.558 0-1.028-.447-1.028-.978 0-.266.116-.546.381-.756C9.661 7.392 10.647 7 11.941 7Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card extended style 1`] = `
.c0 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 16px;
}

.c1 {
  border: solid 4px green;
  border-radius: 32px;
  height: 100px;
  background: linear-gradient(to bottom,white 0%,lightskyblue 100%);
}

<div
  className="c0 c1"
  overflow="visible"
  width="100%"
/>
`;
